# tw

./: .gitignore  ARCHETYPE_STRATEGIES.md  BANKROLL_AND_HOURLY_DISCUSSION.md  CAMERA_APP_PROJECT_KICKOFF.md  CLAUDE.md  CLOUD_PRODUCTION_GUIDE.md  CURRENT_PHASE.md  DECISIONS_LOG.md  HIGH_ONLY_RULE_CATALOG.md  MASTER_HANDOFF_01.md  MC_SIMULATION_V4_FULL_FIELD.html  MC_SIMULATION_V4_GUIDE.html  MC_SIMULATION_V4_MIXED_FIELD.html  MC_SIMULATION_V4_TRUE_MC.html  MC_SIMULATION_V4_VS_ORACLE.html  METHODOLOGY_REVIEW_FOR_CLAUDE_DESKTOP.md  PAIR_DECISION_MATRIX.md  PAIR_S77_FEATURE_HYPOTHESES.md  README.md  RESUME.md  SESSION_42_OVERNIGHT_REPORT.md  SESSION_43_DEFENSIVE_REPORT.md  SESSION_44_SUIT_CONNECTIVITY_REPORT.md  SESSION_45_RULE10_V3_REPORT.md  SESSION_46_RULE11_JPAIR_REPORT.md  SESSION_47_RULE12_TWO_PAIR_REPORT.md  SESSION_48_RULE13_THREE_PAIR_REPORT.md  SESSION_49_TRIPS_PAIR_REPORT.md  SESSION_50_RULE14_AHIGH_REPORT.md  SESSION_51_RULE15_KHIGH_REPORT.md  SESSION_52_RULE16_QHIGH_REPORT.md  SESSION_53_OVERNIGHT_FINAL_SUMMARY.md  SESSION_53_OVERNIGHT_PART2_REPORT.md  SESSION_53_OVERNIGHT_REPORT.md  SESSION_54_V39_DT_REPORT.md  SESSION_55_V41_DT_REPORT.md  SESSION_56_V42_DT_REPORT.md  SESSION_57_V43_DT_REPORT.md  SESSION_58_HIGH_ONLY_DECISION_MATRIX.md  SESSION_58_V44_DT_REPORT.md  (+48 more)
analysis/: pyproject.toml
analysis/scripts/: audit_c_pair_3_S67.py  audit_c_pair_fallback_S67.py  audit_rule15_S61.py  audit_rule16_S62.py  audit_rule17_S63.py  audit_rule_extraction_structural_S94.py  audit_v52_T98_S64.py  audit_v52_chain_bleed_S87.py  build_feature_table.py  (+483 more)
engine/: Cargo.toml
(+79 files in other folders)
