[package]
name = "tw-engine"
version = "0.1.0"
edition = "2021"
description = "Taiwanese Poker solver engine — hand evaluation, Monte Carlo, CFR"

[lib]
name = "tw_engine"
path = "src/lib.rs"

[[bin]]
name = "tw-engine"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "eval_bench"
harness = false

[[bench]]
name = "tier_bench"
harness = false

[[bench]]
name = "mc_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
